--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="sp14">14sp</dimen>
+    <dimen name="dp48">48dp</dimen>
 </resources>
